--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,6 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://salmanahmed:w-T8K-vNQvyT9Gd@cluster0.4fvbs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+SECRET_KEY=sdfadfedfaea
+API_KEY=762552954556738
+API_SECRET=F0Flnn-dXMVs_8SpoXdpsAj2z0k
+CLOUD_NAME=dyinf37iu
